fix: updated mobile view meaning style and stopped search on empty query

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -624,6 +624,7 @@ body {
   }
   .meaning {
     padding: 8px;
+    flex-direction: column;
   }
   .meaning span {
     height: calc(var(--block-height) * 0.5);
